Testing GH Pages

--- a/page.html
+++ b/page.html
@@ -2,11 +2,12 @@
 
 <head>
     <title>
-        This is the run id of the Job just run: RUN_ID
+        RUN_ID
     </title>
 </head>
 
 <body>
+    This is the run id of the Job just run: RUN_ID
     I'm hoping to work out how to put things in their own directory.
 </body>
 
